Fix navbar, implement color blend, fix spacing

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,15 +1,3 @@
-* {
-  border: 0;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: Lato, Helvetica, Arial, sans-serif;
-  background: #eee;
-}
-
 a {
   color: inherit;
   font-family: inherit;
@@ -21,13 +9,13 @@ a {
                           Navbar
   ======================================================*/
 #navbar {
-  color: rgb(13, 26, 38);
   position: fixed;
   top: 0;
   height: 60px;
   line-height: 60px;
   width: 100%;
   z-index: 10;
+  mix-blend-mode: difference;
 }
 
 .nav-wrapper {
@@ -115,7 +103,6 @@ a {
 }
 
 #navbar li a {
-  color: rgb(13, 26, 38);
   display: block;
   font-size: 0.7em;
   height: 50px;
@@ -355,7 +342,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   padding-right: 15px;
